Add config facebook

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,7 @@
 <body>
     <h1>Sign in</h1>
     <a class="button google" href="/oauth/google">Sign in with Google</a>
+    <a class="button facebook" href="/oauth/facebook">Sign in with Facebook</a>
 </body>
 
 </html>
